objects/ITHelpDesk_Contacts__c.object
<CustomObject>
    <label>ITHelpDesk Contacts</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITHelpDesk Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteCode__c</fullName>
        <label>SiteCode</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DayTime_Phone__c</fullName>
        <label>DayTime Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelpDesk_Email__c</fullName>
        <label>HelpDesk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Off_hours_Phone__c</fullName>
        <label>Off hours Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>